# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/print/print_fwk/print.gni")
import("//build/ohos.gni")

config("sane_service_config") {
  include_dirs = [
    "include",
    "${target_gen_dir}",
  ]

  cflags_cc = [
    "-fexceptions",
    "-fdata-sections",
    "-ffunction-sections",
    "-fno-asynchronous-unwind-tables",
    "-fno-unwind-tables",
    "-Os",
  ]
}

ohos_shared_library("sane_service") {
  include_dirs = [ "${print_utils_path}/include" ]

  sources = [ "src/sane_service_ability.cpp" ]

  deps = [ "${print_path}/frameworks/ISaneBackends:sane_backends" ]

  public_configs = [ ":sane_service_config" ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "backends:sane",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "ipc:ipc_napi",
    "ipc:ipc_single",
    "napi:ace_napi",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  subsystem_name = "print"
  part_name = "print_fwk"
}
