# Copyright (c) 2023-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/print/print_fwk/print.gni")

group("fuzztest") {
  testonly = true
  deps = [
    "printcupsclient_fuzzer:fuzztest",
    "printservice_fuzzer:fuzztest",
    "printserviceability_fuzzer:fuzztest",
    "scancallback_fuzzer:fuzztest",
    "scancallbackproxy_fuzzer:fuzztest",
    "scancallbackstub_fuzzer:fuzztest",
    "scancapi_fuzzer:fuzztest",
    "scanhelper_fuzzer:fuzztest",
    "scanmanagerclient_fuzzer:fuzztest",
    "scanserviceability_fuzzer:fuzztest",
    "scanservicestub_fuzzer:fuzztest",
    "scanusbmanager_fuzzer:fuzztest",
  ]
}
