# Copyright (c) 2023-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/print/print_fwk/print.gni")

if (!print_fwk_feature_device_isolation) {
  group("fuzztest") {
    testonly = true
    deps = [
      "abilitymanageradapter_fuzzer:fuzztest",
      "escldrivermanager_fuzzer:fuzztest",
      "eventlistenermgr_fuzzer:fuzztest",
      "ppdinfo_fuzzer:fuzztest",
      "printcupsattribute_fuzzer:fuzztest",
      "printcupsclient_fuzzer:fuzztest",
      "printereventcallback_fuzzer:fuzztest",
      "printjobeventcallback_fuzzer:fuzztest",
      "printserviceability_fuzzer:fuzztest",
      "printserviceabilityprintjob_fuzzer:fuzztest",
      "printserviceabilityprinterppd_fuzzer:fuzztest",
      "printserviceaddprinterfunction_fuzzer:fuzztest",
      "printserviceconnectfunction_fuzzer:fuzztest",
      "printservicefunction_fuzzer:fuzztest",
      "printserviceprinterupdatefunction_fuzzer:fuzztest",
      "printserviceppdqueryfunction_fuzzer:fuzztest",
      "printservicenotpublicfunction_fuzzer:fuzztest",
      "printserviceprintdiscoverfunction_fuzzer:fuzztest",
      "printserviceprintjobstatefunction_fuzzer:fuzztest",
      "printservicequeryprinter_fuzzer:fuzztest",
      "printserviceupdateprinterfunction_fuzzer:fuzztest",
      "printsharedhost_fuzzer:fuzztest",
      "scancallback_fuzzer:fuzztest",
      "scancallbackproxy_fuzzer:fuzztest",
      "scancallbackstub_fuzzer:fuzztest",
      "scancapi_fuzzer:fuzztest",
      "scanhelper_fuzzer:fuzztest",
      "scanmanagerclient_fuzzer:fuzztest",
      "scanmanagerservice_fuzzer:fuzztest",
      "scanserviceability_fuzzer:fuzztest",
      "scanserviceproxy_fuzzer:fuzztest",
      "scanservicestub_fuzzer:fuzztest",
      "scanpicturedata_fuzzer:fuzztest",
      "scantask_fuzzer:fuzztest",
      "scanusbmanager_fuzzer:fuzztest",
      "printsecurityguardmanager_fuzzer:fuzztest",
      "printsecurityguardutil_fuzzer:fuzztest",
    ]
  }
} else {
  group("fuzztest") { }
}
