# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//base/print/print_fwk/print.gni")
import("//build/ohos.gni")

cflags_cc = []

config("print_interfaces_kits_napi_config") {
  visibility = [ ":*" ]
  include_dirs = [ "include" ]

  cflags_cc += [
    "-fno-exceptions",
    "-fdata-sections",
    "-ffunction-sections",
    "-fno-asynchronous-unwind-tables",
    "-fno-unwind-tables",
    "-flto",
    "-Os",
  ]
}
ohos_shared_library("print_helper") {
  include_dirs = [
    "${print_path}/frameworks/innerkitsimpl/print_impl/include",
    "${print_path}/frameworks/models/print_models/include",
    "${print_utils_path}/include",
  ]
  public_configs = [ ":print_interfaces_kits_napi_config" ]

  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    boundary_sanitize = true
    debug = false
    integer_overflow = true
    ubsan = true
  }

  sources = [
    "src/napi_print_utils.cpp",
    "src/print_attributes_helper.cpp",
    "src/print_extension_info_helper.cpp",
    "src/print_job_helper.cpp",
    "src/print_margin_helper.cpp",
    "src/print_page_size_helper.cpp",
    "src/print_preview_attribute_helper.cpp",
    "src/print_range_helper.cpp",
    "src/print_resolution_helper.cpp",
    "src/printer_capability_helper.cpp",
    "src/printer_info_helper.cpp",
    "src/printer_preferences_helper.cpp",
    "src/ppd_info_helper.cpp",
    "src/print_shared_host_helper.cpp",
  ]
  deps = [ "${print_path}/frameworks/models/print_models:print_models" ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "ability_runtime:data_ability_helper",
    "ability_runtime:napi_base_context",
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "input:libmmi-client",
    "ipc:ipc_core",
    "napi:ace_napi",
    "samgr:samgr_proxy",
  ]

  if (build_variant == "user") {
    cflags_cc += [ "-DIS_RELEASE_VERSION" ]
  }

  #relative_install_dir = "module"
  install_enable = true
  subsystem_name = "print"
  innerapi_tags = [ "platformsdk" ]
  part_name = "print_fwk"
}
