# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/print/print_fwk/print.gni")
import("//build/ohos.gni")

ABILITY_RUNTIME_INNERKITS_PATH = "${ability_runtime_inner_api_path}"

config("ability_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "${print_path}/frameworks/innerkitsimpl/include",
    "${print_path}/frameworks/kits/extension/include",
    "${print_path}/utils/include",
    "//commonlibrary/c_utils/base/include",
    "${ability_runtime_path}/interfaces/kits/native/ability/native",
    "${ability_runtime_path}/interfaces/kits/native/appkit/app",
    "${ABILITY_RUNTIME_INNERKITS_PATH}/app_manager/include/appmgr",
    "${ABILITY_RUNTIME_INNERKITS_PATH}/ability_manager/include",
    "${ability_runtime_services_path}/abilitymgr/include",
    "${ability_runtime_path}/interfaces/kits/native/appkit/ability_runtime/app",
    "${ability_runtime_path}/interfaces/kits/native/appkit/app",
    "${ability_runtime_kits_path}/fmskit/native/include",
    "${ability_runtime_path}/interfaces/kits/native/appkit/app",
    "${ability_runtime_services_path}/common/include",

    "//foundation/systemabilitymgr/dmsfwk/services/dtbschedmgr/include",
    "//base/global/resource_management/interfaces/inner_api/include",
    "${ability_runtime_napi_path}/featureAbility",
    "//foundation/arkui/napi/interfaces/kits",
    "//third_party/node/src",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include",
    "${ability_runtime_path}/interfaces/kits/native/ability/native/continuation/remote_register_service",
    "${ability_runtime_path}/interfaces/kits/native/ability/native/continuation/distributed",
    "${ability_runtime_path}/interfaces/kits/native/ability/native/distributed_ability_runtime",
    "${ABILITY_RUNTIME_INNERKITS_PATH}/ability_manager/include/continuation",
    "${ability_runtime_path}/interfaces/kits/native/ability/native/continuation/kits",
    "${ability_runtime_path}/interfaces/kits/native/appkit/app/task",
    "${ability_runtime_napi_path}/inner/napi_common",
  ]

  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
  defines = [
    "APP_LOG_TAG = \"Ability\"",
    "LOG_DOMAIN = 0xD002200",
  ]
}

config("ability_public_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "${print_path}/frameworks/innerkitsimpl/include",
    "${print_path}/frameworks/kits/extension/include",
    "${ABILITY_RUNTIME_INNERKITS_PATH}/base/include",
    "${ability_runtime_path}/interfaces/kits/native",
    "${ability_runtime_path}/interfaces/kits/native/appkit/ability_runtime/app",
    "${ability_runtime_path}/interfaces/kits/native/appkit/app",
    "${ability_runtime_path}/interfaces/kits/native/ability_runtime",
    "${ability_runtime_path}/interfaces/kits/native/ability/native",
    "//third_party/libuv/include",
    "${ability_runtime_path}/interfaces/kits/native/ability_runtime/context",
    "${ability_runtime_path}/interfaces/kits/native/ability/native/continuation/remote_register_service",
    "${ability_runtime_path}/interfaces/kits/native/ability/native/continuation/distributed",
    "${ability_runtime_path}/interfaces/kits/native/ability/native/distributed_ability_runtime",
    "${ABILITY_RUNTIME_INNERKITS_PATH}/ability_manager/include/continuation",
    "//base/global/resource_management/interfaces/inner_api/include",
    "${ability_runtime_path}/interfaces/kits/native/ability/native/continuation/kits",
    "${ability_runtime_kits_path}/fmskit/native/include",
    "//third_party/jsoncpp/include",
    "//third_party/json/include",
  ]
}

ohos_shared_library("print_extension_framework") {
  include_dirs = [
    "${print_path}/frameworks/innerkitsimpl/include",
    "${print_path}/frameworks/kits/extension/include",
    "//base/global/i18n/frameworks/intl/include",
  ]

  sources = [
    "src/js_print_extension.cpp",
    "src/js_print_extension_context.cpp",
    "src/print_extension.cpp",
    "src/print_extension_context.cpp",
    "src/js_print_callback.cpp",
    "src/js_print_extension_connection.cpp",
  ]
  configs = [ ":ability_config" ]
  public_configs = [
    ":ability_public_config",
    "${ability_runtime_path}/frameworks/native/ability:ability_context_public_config",
  ]

  deps = [
    "${ability_runtime_path}/frameworks/native/appkit:app_context",
    "${print_path}/frameworks/innerkitsimpl:print_client",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "ability_runtime:runtime",
    "c_utils:utils",
    "hitrace_native:hitrace_meter",
    "hiviewdfx_hilog_native:libhilog",
    "ipc_js:rpc",
    "ipc:ipc_napi_common"
  ]

  public_deps = [
    "//base/global/i18n/frameworks/intl:intl_util",
    "//base/global/resource_management/frameworks/resmgr:global_resmgr",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
    "//foundation/arkui/napi:ace_napi",
  ]

  subsystem_name = "print"
  part_name = "print_fwk"
}

ohos_shared_library("print_extension_module") {
  include_dirs = [
    "${ability_runtime_path}/interfaces/kits/native/ability/native",
    "${ability_runtime_path}/interfaces/kits/native/ability/native/ability_runtime",
  ]

  sources = [ "${print_path}/frameworks/kits/extension/src/print_extension_module_loader.cpp" ]

  configs = [ ":ability_config" ]
  public_configs = [ ":ability_public_config" ]

  deps = [
    ":print_extension_framework",
    "${ability_runtime_path}/frameworks/native/ability/native:abilitykit_native",
  ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:runtime",
    "c_utils:utils",
    "hisysevent_native:libhisysevent",
    "hitrace_native:hitrace_meter",
    "hiviewdfx_hilog_native:libhilog",
  ]
  relative_install_dir = "extensionability"
  subsystem_name = "print"
  part_name = "print_fwk"
}
